--- a/style.css
+++ b/style.css
@@ -29,7 +29,11 @@
 
     /* size */
     --size-border-radius:4px;
+
+    /* Annimation */
+    --animation-duration: 300ms;
   }
+
   /* Universial tags */
   *{
     box-sizing: border-box;
@@ -146,7 +150,132 @@
   font-size: var(--font-regular);
   font-weight: var(--weight-bold);
   margin:24px;
-  padding: 8px 12px;
-  border: 2px solid white;
+  padding:8px 12px;
+  border:2px solid white;
   border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section{
+  padding: 50px;
+  text-align: center;
+  margin: auto;
+}
+
+.section_container{
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+.about__majors{
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major_icon{
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  line-height: 170px;
+  margin: auto;
+  color: var(--color-dark-violet);
+  border: 1px solid var(--color-blue);
+  border-radius:50%;
+  margin-bottom: 16px;
+}
+
+.major_icon i{
+  transition: var(--animation-duration);
+}
+
+.major_icon:hover i{
+  color:var(--color-blue);
+  transform: rotate(-30deg) scale(1.1);
+}
+
+.major_title, .major_description{
+  color: var(--color-dark-grey);
+}
+
+.major_description{
+  font-size:var(--font-small);
+}
+
+.job{
+  display: flex;
+  align-items: center;
+}
+
+.job__description{
+  margin: 0 16px;
+  text-align: left;
+}
+
+.job_name, .job_period{
+  color: var(--color-light-grey);
+}
+
+.job_name{
+  font-size: var(--font-small);
+}
+
+.job_period{
+  font-size: var(--font-micro);
+}
+
+/* Skill */
+#skills{
+  background-color: var(--color-yellow);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin:20px 0;
+}
+
+.skillset__title{
+  color:var(--color-white);
+}
+
+.skillset__left{
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+
+.skillset__right{
+flex-basis: 40%;
+}
+
+.tools{
+  background-color: var(--color-grey);
+}
+
+.skill_description{
+  display: flex;
+  justify-content: space-between
+}
+
+.skill__bar{
+  width:100%;
+  height:3px;
+  background-color: var(--color-grey);
+}
+
+.skill{
+  margin-bottom: 30px;
+}
+
+.skill__value{
+  width:70%;
+  height: 3px;
+  background-color: var(--color-orange);
+}
+
+.tools, .etc{
+  padding: 20px;
 }
