--- a/style.css
+++ b/style.css
@@ -119,11 +119,20 @@
   border-radius: var(--size-border-radius);
 }
 
-.navbar_menu_item.active{
+/* .navbar_menu_item.active{
   border:1px solid var(--color-white);
-}
+} */
 .navbar_menu_item:hover{
   background-color:var(--color-dark-violet);
+}
+
+.navbar__toggle-btn{
+  position:absolute;
+  right: 32px;
+  font-size: 24px;
+  color:var(--color-white);
+  top: 32px;
+  display:none;
 }
 
 /* Home */
@@ -395,4 +404,36 @@ flex-basis: 40%;
 .contact_links i:hover{
   transform: scale(1.1);
   color: var(--color-yellow);
+}
+
+@media screen and (max-width: 768px){
+  .navbar__toggle-btn{
+    display:block;
+  }
+  #navbar{
+    flex-direction:column;
+    align-items: flex-start;
+  }
+  .navbar_menu{
+    flex-direction: column;
+    text-align:center;
+    width: 100%;
+    display:none;
+  }
+
+  .about__majors{
+    flex-direction: column;
+  }
+
+  .major{
+    margin-bottom: 38px;
+  }
+  
+  .skillset{
+    flex-direction: column;
+  }
+
+  .project{
+    flex-grow:1;
+  }
 }
