--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
     padding: 10px;
     color: var(--color-white);
     transition: all var(--animation-duration) ease-in-out;
+    z-index:1;
   }
 
   #navbar.navbar--dark{
@@ -244,7 +245,7 @@
 
 /* Skill */
 #skills{
-  background-color: var(--color-yellow);
+  background-color: var(--color-light-white);
 }
 
 .skillset {
