--- a/style.css
+++ b/style.css
@@ -416,6 +416,27 @@ flex-basis: 40%;
   color: var(--color-yellow);
 }
 
+/* Scroll */
+.arrow-up{
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  font-size: 50px;
+  background-color: var(--color-violet);
+  color:var(--color-white);
+  border-radius:50%;
+  width: 70px;
+  height: 70px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 300ms ease-in;
+}
+
+.arrow-up.visible{
+  opacity: 1;
+  pointer-events: auto;
+}
+
 @media screen and (max-width: 768px){
   .navbar__toggle-btn{
     display:block;
