--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
     justify-content: space-between;
     background-color:transparent;
     align-items:center;
-    padding: 10px;
+    padding: 16px;
     color: var(--color-white);
     transition: all var(--animation-duration) ease-in-out;
     z-index:1;
@@ -111,9 +111,7 @@
   }
 
 .navbar_menu{
-  display: flex;
-
-}
+  display: flex;}
 
 .navbar_logo{
   font-size: var(--font-medium);
@@ -389,7 +387,7 @@ flex-basis: 40%;
 }
 
 .project__description h3{
-  color: white;
+  color: orange;
 }
 
 .project__description h3:after{
@@ -397,9 +395,9 @@ flex-basis: 40%;
   position:relative;
   left: 50%;
   content: '';
-  width:25px;
+  width:50px;
   height:2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top:8px;
   background-color:var(--color-dark-white);
 }
@@ -455,12 +453,21 @@ flex-basis: 40%;
   #navbar{
     flex-direction:column;
     align-items: flex-start;
+    background-color: var(--color-violet);
+  }
+
+  #navbar.navbar--dark{
+    padding: 16px;
   }
   .navbar_menu{
     flex-direction: column;
     text-align:center;
     width: 100%;
     display:none;
+  }
+
+  .navbar_menu.open{
+    display:block;
   }
 
   .about__majors{
